--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             </div>
         </section>
     </div>
-    <footer class="footer d-none">
+    <footer class="footer">
         <div class="container">
             <div class="footer__top">
                 <div class="footer__lists">
@@ -474,9 +474,12 @@
                         </ul>
                     </div>
                 </div>
+                <hr class="mobile">
                 <div class="footer__contacts">
-                    <a href="#"><img src="icons/google_pay.png" alt=""></a>
-                    <a href="#"><img src="icons/apple_store.png" alt=""></a>
+                    <div class="">
+                        <a href="#"><img src="icons/google_pay.png" alt=""></a>
+                        <a href="#"><img src="icons/apple_store.png" alt=""></a>
+                    </div>
                     <div class="footer__phone">
                         <a href="tel:+88003020060">8-800-302-00-60</a>
                         <p>Звонок бесплатный</p>
@@ -511,7 +514,7 @@
                         <a href="#" class="footer__logo">
                             Додо Пицца
                         </a>
-                        <span class="footer__copyright">© 2023</span>
+                        <span class="footer__copyright">© 2021</span>
                     </div>
                     <div class="footer__other">
                         <ul>
@@ -520,6 +523,7 @@
                             <li><a href="#">Помощь</a></li>
                         </ul>
                     </div>
+                    <hr class="mobile">
                     <div class="footer__social">
                         <a href="#"><img src="./icons/social/facebook.svg" alt=""></a>
                         <a href="#"><img src="./icons/social/instagram.svg" alt=""></a>
