[FIX ]adaptive debug

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 </div>
                 <hr class="mobile">
                 <div class="footer__contacts">
-                    <div class="">
+                    <div class="footer__apps">
                         <a href="#"><img src="icons/google_pay.png" alt=""></a>
                         <a href="#"><img src="icons/apple_store.png" alt=""></a>
                     </div>
@@ -514,7 +514,7 @@
                         <a href="#" class="footer__logo">
                             Додо Пицца
                         </a>
-                        <span class="footer__copyright">© 2021</span>
+                        <span class="footer__copyright"><nobr>© 2021</nobr></span>
                     </div>
                     <div class="footer__other">
                         <ul>
