modal part_pizza

--- a/index.html
+++ b/index.html
@@ -436,6 +436,27 @@
                 </div>
             </div>
         </section>
+        <div class="modal">
+            <div class="modal__content">
+                <div class="modal__img">
+                    <div class="modal__border">
+                        <img class="border" src="./img/pizza/pizza_border.png" alt="Граница пиццы">
+                        <div class="modal__pizza">
+                            <img class="big d-none" src="./img/pizza/cheesy-cheddar/cheesy-chadder-big-traditional.jpeg" alt="Чиззи Чедер большая традиционная">
+                            <img class="big d-none" src="./img/pizza/cheesy-cheddar/cheesy-chadder-big-thin.jpeg" alt="Чиззи Чедер большая тонкая">
+                            <img class="middle" src="./img/pizza/cheesy-cheddar/cheesy-chadder-middle-traditional.jpeg" alt="Чиззи Чедер средняя традиционная">
+                            <img class="middle d-none" src="./img/pizza/cheesy-cheddar/cheesy-chadder-middle-thin.jpeg" alt="Чиззи Чедер средняя тонкая">
+                            <img class="small d-none" src="./img/pizza/cheesy-cheddar/cheesy-chadder-small.jpeg" alt="Чиззи Чедер маленькая">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal__settings">
+                    <h2>Чиззи чеддер</h2>
+                    <p>30 см, традиционное тесто, 480 г</p>
+                </div>
+                <!-- <img src="./icons/close.svg" alt="Иконка закрыть"> -->
+            </div>
+        </div>
     </div>
     <footer class="footer">
         <div class="container">
