modal background and close

--- a/index.html
+++ b/index.html
@@ -436,6 +436,9 @@
                 </div>
             </div>
         </section>
+        
+    </div>
+    <div class="modal__back d-none">
         <div class="modal">
             <div class="modal__content">
                 <div class="modal__img">
@@ -453,9 +456,16 @@
                 <div class="modal__settings">
                     <h2>Чиззи чеддер</h2>
                     <p>30 см, традиционное тесто, 480 г</p>
+                    <img class="big" src="./img/pizza/cheesy-cheddar/cheesy-chadder-big-traditional.jpeg" alt="Чиззи Чедер большая традиционная">
+                    <img class="big" src="./img/pizza/cheesy-cheddar/cheesy-chadder-big-thin.jpeg" alt="Чиззи Чедер большая тонкая">
+                    <img class="middle" src="./img/pizza/cheesy-cheddar/cheesy-chadder-middle-traditional.jpeg" alt="Чиззи Чедер средняя традиционная">
+                    <img class="middle" src="./img/pizza/cheesy-cheddar/cheesy-chadder-middle-thin.jpeg" alt="Чиззи Чедер средняя тонкая">
+                    <img class="small" src="./img/pizza/cheesy-cheddar/cheesy-chadder-small.jpeg" alt="Чиззи Чедер маленькая">
                 </div>
-                <!-- <img src="./icons/close.svg" alt="Иконка закрыть"> -->
             </div>
+            <button class="modal__close">
+                <img src="./icons/close.svg" alt="Иконка закрыть">
+            </button>
         </div>
     </div>
     <footer class="footer">
