mobile menu__basket

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                         <li><a href="#other">Другие товары</a></li>
                     </ul>
                 </nav>
-                <a href="#" class="button button--orange menu__basket">Корзина</a>
+                <a href="#" class="button button--orange menu__basket">
+                    <span>Корзина</span>
+                    <img src="./icons/basket.svg" alt="корзина">
+                    <div class="menu__quantity">2</div>
+                </a>
             </div>
         </section>
         <section class="slider">
@@ -438,7 +442,7 @@
         </section>
         
     </div>
-    <div class="modal__back">
+    <div class="modal__back d-none">
         <div class="modal">
             <div class="modal__content">
                 <div class="modal__img">
@@ -526,7 +530,7 @@
                             </div>
                             <h3>Добавить в пиццу</h3>
                             <div class="form__dops ">
-                                <label class="form__dop qwer dop">
+                                <label class="form__dop dop">
                                     <img src="./img/filling/cheese_border.jpg" alt="сырный бортик">
                                     <div class="dop__text">
                                         <p class="dop__name">Cырный бортик</p>
