--- a/index.html
+++ b/index.html
@@ -442,6 +442,8 @@
         </section>
         
     </div>
+
+    <!-- модалка пиццы -->
     <div class="modal__back d-none">
         <div class="modal">
             <div class="modal__content">
@@ -585,6 +587,33 @@
                                     <img src="./icons/dop__check.svg" alt="check" class="dop__check__icon d-none">
                                 </label>
                             </div>
+                            <div class="form__button">
+                                <button class="button button--orange">Добавить в корзину за 625 ₽</button>
+                            </div>
+                        </form>
+                    </div>
+            </div>
+            <button class="modal__close">
+                <img src="./icons/close.svg" alt="Иконка закрыть">
+            </button>
+        </div>
+    </div>
+    <!-- модалка закусок -->
+    <div class="modal__back">
+        <div class="modal modal2">
+            <div class="modal__content">
+                <div class="modal__img">
+                    <div class="modal__border">
+                        <div class="modal__pizza">
+                            <img src="./img/deserts/rolls_16.jpg" alt="Рулетики с ананасами и брусникой">
+                        </div>
+                    </div>
+                </div>
+                    <div class="modal__settings">
+                        <h2 class="modal__title">Рулетики с ананасами + Рулетики с брусникой, 16 шт</h2>
+                        <p class="modal__descr modal2__descr">16 шт</p>
+                        <p class="modal__descr modal2__descr2">Микс рулетиков со сгущенным молоком: 8 штук с ананасом и корицей, 8 штук с брусникой</p>
+                        <form action="" class="form">
                             <div class="form__button">
                                 <button class="button button--orange">Добавить в корзину за 625 ₽</button>
                             </div>
