--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         </div>
     </div>
     <!-- модалка закусок -->
-    <div class="modal__back">
+    <div class="modal__back d-none">
         <div class="modal modal2">
             <div class="modal__content">
                 <div class="modal__img">
