appearance modal1 / modal2

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="container">
                 <h2>Пицца</h2>
                 <div class="content">
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/pizza_half.jpg" alt="Пицца из половинок">
                         <div class="card__text">
                             <p class="card__name">Пицца из половинок</p>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/pepperoni_heart.jpg" alt="Пепперони-сердце">
                         <div class="card__text">
                             <p class="card__name">Пепперони-сердце</p>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/pie_heart.jpg" alt="Пирог-сердце">
                         <div class="card__text">
                             <p class="card__name">Пирог-сердце</p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/cheesy_cheder.jpg" alt="Чиззи чеддер">
                         <div class="card__text">
                             <p class="card__name">Чиззи чеддер</p>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/chikeen_blu_cheese.jpg" alt="Цыпленок блю чиз">
                         <div class="card__text">
                             <p class="card__name">Цыпленок блю чиз</p>
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/salmon.jpg" alt="Нежный лосось">
                         <div class="card__text">
                             <p class="card__name">Нежный лосось</p>
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/cheese.jpg" alt="Сырная">
                         <div class="card__text">
                             <p class="card__name">Сырная</p>
@@ -178,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/pizza/pepperoni_fresh.jpg" alt="Пепперони фреш">
                         <div class="card__text">
                             <p class="card__name">Пепперони фреш</p>
@@ -196,7 +196,7 @@
             <div class="container">
                 <h2>Комбо</h2>
                 <div class="content">
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/combo/combo.jpg" alt="Комбо за 599 ₽">
                         <div class="card__text">
                             <p class="card__name">Комбо за 599 ₽</p>
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/combo/combo.jpg" alt="2 пиццы">
                         <div class="card__text">
                             <p class="card__name">2 пиццы</p>
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/combo/combo.jpg" alt="2 пиццы и закуска">
                         <div class="card__text">
                             <p class="card__name">2 пиццы и закуска</p>
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/combo/combo.jpg" alt="Пицца и 2 закуски">
                         <div class="card__text">
                             <p class="card__name">Пицца и 2 закуски</p>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card buy">
+                    <div class="card buy pizza">
                         <img src="./img/combo/combo_3.jpg" alt="Комбо за 999 ₽">
                         <div class="card__text">
                             <p class="card__name">Комбо за 999 ₽</p>
