modal form__tag style from JS

--- a/index.html
+++ b/index.html
@@ -561,19 +561,19 @@
                     <div class="modal__settings">
                         <h2 class="modal__title">Чиззи чеддер</h2>
                         <p class="modal__descr">30 см, традиционное тесто, 480 г</p>
-                        <form action="" class="form" onclick="return false;">
+                        <form action="" class="form"">
                             <div class="form__tags">
                                 <div class="form__tag">
                                     <label for="ham">Ветчина</label>
-                                    <input type="checkbox" name="1" id="ham">
+                                    <input type="checkbox" name="1" id="ham" checked>
                                 </div>
                                 <div class="form__tag tag__permament">
                                     <label for="chedder">сыр чеддер</label>
-                                    <input type="checkbox" name="1" id="chedder" checked onclick="return false;">
+                                    <input type="checkbox" name="1" id="chedder" checked">
                                 </div>
                                 <div class="form__tag">
                                     <label for="papper">сладкий перец</label>
-                                    <input type="checkbox" name="1" id="papper">
+                                    <input type="checkbox" name="1" id="papper" checked>
                                 </div>
                                 <div class="form__tag tag__permament">
                                     <label for="mozzarella">моцарелла</label>
@@ -589,7 +589,7 @@
                                 </div>
                                 <div class="form__tag">
                                     <label for="italian__herbs">итальянские травы</label>
-                                    <input type="checkbox" name="1" id="italian__herbs">
+                                    <input type="checkbox" name="1" id="italian__herbs" checked>
                                 </div>
                             </div>
                             <div class="form__size form__radios">
