modal close-arrow- button && hide scrollbar

--- a/index.html
+++ b/index.html
@@ -693,7 +693,8 @@
                     </div>
             </div>
             <button class="modal__close close">
-                <img src="./icons/close.svg" alt="Иконка закрыть">
+                <img src="./icons/close.svg" alt="Иконка закрыть" class="icon__close">
+                <img src="./icons/arrow_down.svg" alt="Иконка закрыть" class="icon__arrow">
             </button>
         </div>
     </div>
@@ -720,7 +721,8 @@
                     </div>
             </div>
             <button class="modal__close close">
-                <img src="./icons/close.svg" alt="Иконка закрыть">
+                <img src="./icons/close.svg" alt="Иконка закрыть" class="icon__close">
+                <img src="./icons/arrow_down.svg" alt="Иконка закрыть" class="icon__arrow">
             </button>
         </div>
     </div>
