modal overflow:hidden

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <p class="card__descr">Соберите свою пиццу 35 см с двумя разными вкусами</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 600 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                                 <p class="card__descr">Пикантная пепперони, моцарелла, томатный соус</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 625 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                                 <p class="card__descr">Ананасы, брусника, сгущенное молоко</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 625 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 <p class="card__descr">Ветчина, сыр чеддер, сладкий перец, моцарелла, томатный соус, чеснок, итальянские травы</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 625 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                                 <p class="card__descr">Цыпленок, сыр блю чиз, томаты, моцарелла, соус альфредо</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 445 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                 <p class="card__descr">Лосось, томаты черри, соус песто, моцарелла, соус альфредо</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 495 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 <p class="card__descr">Увеличенная порция моцареллы, сыры чеддер и пармезан, соус альфредо</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 245 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                 <p class="card__descr">Пикантная пепперони, увеличенная порция моцареллы, томаты, томатный соус</p>
                                 <div class="card__bottom">
                                     <p class="card__price">от 245 ₽</p>
-                                    <button class="button buy">Выбрать</button>
+                                    <button class="button buy pizza">Выбрать</button>
                                 </div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                                 <p class="card__descr">Наш хит «Аррива!» или другая пицца 25 см, Додстер, напиток и соус.</p>
                                 <div class="card__bottom">
                                     <p class="card__price">599 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                                 <p class="card__descr">Самое популярное комбо из 2 пицц 30 см. Большой выбор</p>
                                 <div class="card__bottom">
                                     <p class="card__price">899 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                                 <p class="card__descr">2 пиццы 25 см и закуска на выбор. Для компании из 2–4 человек</p>
                                 <div class="card__bottom">
                                     <p class="card__price">799 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 <p class="card__descr">Пицца 30 см и 2 закуски на выбор. Для компании из 2–4 человек</p>
                                 <div class="card__bottom">
                                     <p class="card__price">599 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
@@ -248,7 +248,7 @@
                                 <p class="card__descr">3 пиццы 30 см на тонком тесте по суперцене. Выбор пицц ограничен</p>
                                 <div class="card__bottom">
                                     <p class="card__price">999 ₽</p>
-                                    <button class="button buy button--orange">Собрать</button>
+                                    <button class="button buy button--orange pizza">Собрать</button>
                                 </div>
                             </div>
                         </div>
