--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <section class="new">
                 <div class="container">
                     <h2>Новое и популярное</h2>
+                </div>
+                <div class="container">
                     <div class="content">
                         <div class="new__card buy pizza">
                             <img src="./img/pizza/cezar/cezar-traditional-big.jpeg" alt="Пицца Цезарь">
