-page_basket header steps

--- a/basket_1.html
+++ b/basket_1.html
@@ -24,6 +24,21 @@
                             <p>Сеть пиццерий  №1 в России</p>
                         </div>
                     </a>
+                    <div class="header__steps">
+
+                        <div class="step step__active">
+                            <div class="step__number">1</div>
+                            <p class="step__title">Корзна</p>
+                        </div>
+                        <div class="step">
+                            <div class="step__number">2</div>
+                            <p class="step__title">Оформление заказа</p>
+                        </div>
+                        <div class="step">
+                            <div class="step__number">3</div>
+                            <p class="step__title">Заказ принят</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
