-page_basket price

--- a/basket_1.html
+++ b/basket_1.html
@@ -84,6 +84,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="container basket__container">
+                    <div class="price">
+                        <p>Сумма заказа: <span>4 792 ₽</span></p>
+                    </div>
+                    <div class="buttons"></div>
+                </div>
             </section>
         </main>
     </div>
