-page_basket buttons AND add page_basket_2

--- a/basket_2.html
+++ b/basket_2.html
@@ -30,7 +30,7 @@
                             <div class="step__number">1</div>
                             <p class="step__title">Корзна</p>
                         </div>
-                        <div class="step">
+                        <div class="step step__active">
                             <div class="step__number">2</div>
                             <p class="step__title">Оформление заказа</p>
                         </div>
@@ -45,7 +45,7 @@
         <main>
             <section>
                 <div class="container basket__container">
-                    <h1 class="title">Корзина</h1>
+                    <h1 class="title">Заказ на доставку</h1>
                 </div>
             </section>
             <section class="new">
@@ -53,48 +53,16 @@
                     <h2>Добавить к заказу?</h2>
                 </div>
                 <div class="container basket__container">
-                    <div class="content">
-                        <div class="new__card buy pizza">
-                            <img src="./img/pizza/cezar/cezar-traditional-big.jpeg" alt="Пицца Цезарь">
-                            <div class="new__text">
-                                <div class="new__name">Цезарь</div>
-                                <div class="new__price">от 445 ₽</div>
-                            </div>
-                        </div>
-                        <div class="new__card buy pizza">
-                            <img src="./img/pizza/tender-salmon/tender-salomon-traditional-small.jpeg" alt="Нежный лосось">
-                            <div class="new__text">
-                                <div class="new__name">Нежный лосось</div>
-                                <div class="new__price">от 495 ₽</div>
-                            </div>
-                        </div>
-                        <div class="new__card buy pizza">
-                            <img src="./img/combo/combo_2.jpg" alt="2 пиццы">
-                            <div class="new__text">
-                                <div class="new__name">2 пиццы</div>
-                                <div class="new__price">899 ₽</div>
-                            </div>
-                        </div>
-                        <div class="new__card buy pizza">
-                            <img src="./img/pizza/carbonara/carbonara-traditional-small.jpeg" alt="Пицца Карбонара">
-                            <div class="new__text">
-                                <div class="new__name">Карбонара</div>
-                                <div class="new__price">от 395 ₽</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container basket__container">
                     <div class="price">
                         <p>Сумма заказа: <span>4 792 ₽</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="../" class="button button--grey back">
+                        <a href="basket_1.html" class="button button--grey back">
                             <img src="./icons/arrow_right.svg" alt="назад">
-                            <span>Вернуться в меню</span>
+                            <span>Назад в корзину</span>
                         </a>
-                        <a href="basket_2.html" class="button button--orange">
-                            <span>Оформить заказ</span>
+                        <a href="basket_3.html" class="button button--orange">
+                            <span>Оформить заказ на 675 ₽ </span>
                             <img src="./icons/arrow_right.svg" alt="вперед">
                         </a>
                     </div>
